--- a/.github/workflows/vuepress-auto.yml
+++ b/.github/workflows/vuepress-auto.yml
@@ -37,7 +37,7 @@ jobs:
       - name: 构建文档
         env:
           NODE_OPTIONS: --max_old_space_size=8192
-        run: |-
+        run: |
           npm run build
           
       - name: web deploy
@@ -45,5 +45,5 @@ jobs:
         with:
           github_token: ${{ secrets.ACCESS_TOKEN }}
           publish_branch: gh_pages
-          publish_dir: ./dist
+          publish_dir: resume/.vuepress/dist
           commit_message: auto deploy
