--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -14,5 +14,5 @@ jobs:
         TARGET_REPO: mynxg/vuepress-resume
         TARGET_BRANCH: gh_pages
         BUILD_SCRIPT: npm i && npm run build
-        BUILD_DIR: docs/.vuepress/dist
+        BUILD_DIR: resume/.vuepress/dist
         CNAME: https://blog.lxip.top
